plugins {
  id 'java'
  id 'application'
  id 'idea'
  id "io.spring.dependency-management" version "1.0.10.RELEASE"
}

dependencyManagement {
  imports {
    mavenBom "io.projectreactor:reactor-bom:Dysprosium-SR12"
  }
}

repositories {
  jcenter()
  maven { url 'https://jitpack.io' }
  maven() {
    url "https://ksqldb-maven.s3.amazonaws.com/maven/"
  }
  maven() {
    url "https://jenkins-confluent-packages-beta-maven.s3.amazonaws.com/6.1.0-beta200825192044/1/maven/"
  }
}

sourceCompatibility = 11

/*
tasks.withType(JavaCompile) {
  options.compilerArgs += '--enable-preview'
}

tasks.withType(Test) {
  jvmArgs += "--enable-preview"
}
*/

dependencies {

  implementation("io.confluent.ksql:ksqldb-api-client:0.12.0") {
    exclude group: 'org.slf4j', module: 'slf4j-log4j12'
  }
  implementation 'io.projectreactor:reactor-core'
  implementation 'ch.qos.logback:logback-classic:1.2.3'

  implementation 'org.projectlombok:lombok:1.18.8'
  annotationProcessor 'org.projectlombok:lombok:1.18.8'
  testAnnotationProcessor 'org.projectlombok:lombok:1.18.8'

  // Use JUnit Jupiter API for testing.
  testImplementation 'org.junit.jupiter:junit-jupiter-api:5.6.2'

  // Use JUnit Jupiter Engine for testing.
  testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.6.2'

  implementation platform('org.testcontainers:testcontainers-bom:1.15.0-rc2') //import bom
  testImplementation('org.testcontainers:kafka') //no version specified
  //testImplementation 'com.github.gAmUssA:testcontainers-java-module-confluent-platform:master-SNAPSHOT'
  testImplementation 'com.github.gAmUssA:testcontainers-java-module-confluent-platform:1da40973a1'

  testImplementation 'org.assertj:assertj-core:3.16.1'
}

application {
  // Define the main class for the application.
  mainClassName = 'io.confluent.developer.reactor-ksqldb.App'
}

test {
  // Use junit platform for unit tests
  useJUnitPlatform()
}

tasks.withType(Test) {
  testLogging {
    outputs.upToDateWhen { false }
    events 'standard_out'
    exceptionFormat = "full"
  }
}